# tome

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  testfile  testfile.py  testpackage.py  testuser.py  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
tome/: artifact.py
tome/artifacts/: __init__.py  file.py  package.py  user.py
tome/cli/: commands.py  shell.py
tome/openstack/common/: gettextutils.py  processutils.py  strutils.py
tome/tests/: test_tome.py
