[metadata]
name = tome
summary = tome
description-file =
    README.rst
author = James Slagle
author-email = james.slagle@gmail.com
home-page = http://github.com/slagle/tome
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    tome

[entry_points]
console_scripts =
    tome = tome.cli.shell:main
tome.cli.commands =
    create = tome.cli.commands:Create
    delete = tome.cli.commands:Delete
    exists = tome.cli.commands:Exists

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tome/locale
domain = tome

[update_catalog]
domain = tome
output_dir = tome/locale
input_file = tome/locale/tome.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tome/locale/tome.pot
